# holt

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .taplo.toml  .yamllint.yaml  .zizmor.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Earthfile  Justfile  README.md  holt.toml  justfile  renovate.json
crates/book/: Cargo.toml  Trunk.toml  build.rs  justfile  tailwind-input.css  tailwind.config.js
crates/book/public/: styles.css
crates/book/src/: app.rs  lib.rs  main.rs  story.rs
crates/book/src/cli/: commands.rs  mod.rs
crates/book/src/components/: mod.rs  storybook.rs
crates/book/src/docs/: codegen.rs  extractor.rs  mod.rs  parser.rs  pipeline.rs  rustdoc.rs
crates/book/src/registry/: all_stories.rs  badge.rs  button.rs  mod.rs  story.rs
crates/book/src/ui/: app.rs  components.rs  mod.rs  story.rs
crates/book/src/ui/components/: markdown.rs  mod.rs  storybook.rs
crates/book/src/ui/components/behavior/: sidebar.rs
crates/book/tests/: sidebar.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  comparison.rs  config.rs  discovery.rs  geckodriver.rs  main.rs  screenshot.rs  storybook.rs  webdriver.rs
crates/cli/src/commands/: build.rs  mod.rs  run.rs  serve.rs  snapshot.rs  test.rs
crates/cli/src/snapshot/: compare.rs  driver.rs  mod.rs  story.rs
crates/cli/tests/: cli.rs
crates/floating/: Cargo.toml
crates/kit/: Cargo.toml
crates/kit-docs/: Cargo.toml  Dockerfile  Trunk.toml  build.rs  index.html  justfile
crates/kit-docs/public/: styles.css
crates/kit-docs/src/: e2e.rs  lib.rs  main.rs  stories.rs
crates/kit-docs/src/stories/: CLAUDE.md  accordion.rs  alert.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  card.rs  carousel.rs  checkbox.rs  collapsible.rs  context_menu.rs  dialog.rs  dropdown_menu.rs  hover_card.rs  input.rs  label.rs  mod.rs  navigation_menu.rs  pagination.rs  popover.rs  progress.rs  radio_group.rs  scroll_area.rs  select.rs  separator.rs  sheet.rs  skeleton.rs  slider.rs  switch.rs  table.rs  tabs.rs  textarea.rs  toggle.rs  toggle_group.rs  tooltip.rs  typography.rs
crates/kit-docs/src/stories/accordion/: e2e.rs
crates/kit-docs/src/stories/alert/: e2e.rs
crates/kit-docs/src/stories/alert_dialog/: e2e.rs
crates/kit-docs/src/stories/aspect_ratio/: e2e.rs
crates/kit-docs/src/stories/avatar/: e2e.rs
crates/kit-docs/src/stories/badge/: e2e.rs
crates/kit-docs/src/stories/carousel/: e2e.rs
crates/kit-docs/src/stories/context_menu/: e2e.rs
crates/kit-docs/src/stories/dialog/: e2e.rs
crates/kit-docs/src/stories/dropdown_menu/: e2e.rs  mod.rs
crates/kit-docs/src/stories/hover_card/: e2e.rs
crates/kit-docs/src/stories/menubar/: e2e.rs  mod.rs
crates/kit-docs/src/stories/navigation_menu/: e2e.rs
crates/kit-docs/src/stories/pagination/: e2e.rs
crates/kit-docs/src/stories/popover/: e2e.rs
crates/kit-docs/src/stories/progress/: e2e.rs
crates/kit-docs/src/stories/radio_group/: e2e.rs
crates/kit-docs/src/stories/scroll_area/: e2e.rs  mod.rs
crates/kit-docs/src/stories/select/: e2e.rs
crates/kit-docs/src/stories/sheet/: e2e.rs
crates/kit-docs/src/stories/skeleton/: e2e.rs
crates/kit-docs/src/stories/slider/: e2e.rs
crates/kit-docs/src/stories/table/: e2e.rs
crates/kit-docs/src/stories/tabs/: e2e.rs
crates/kit-docs/src/stories/toggle_group/: e2e.rs
crates/kit-docs/src/stories/tooltip/: e2e.rs
crates/kit-docs/tests/: Caddyfile  e2e.rs
crates/kit/src/: CLAUDE.md  behavior.rs  floating.rs  lib.rs  testing.rs  visual.rs
crates/kit/src/behavior/: accordion.rs  alert_dialog.rs  carousel.rs  checkbox.rs  collapsible.rs  context_menu.rs  dialog.rs  dropdown_menu.rs  hover_card.rs  menubar.rs  mod.rs  navigation_menu.rs  popover.rs  radio_group.rs  select.rs  select_keyboard.rs  sheet.rs  sidebar.rs  slider.rs  switch.rs  tabs.rs  toggle.rs  toggle_group.rs  tooltip.rs
crates/kit/src/visual/: accordion.rs  alert.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  card.rs  carousel.rs  checkbox.rs  collapsible.rs  context_menu.rs  dialog.rs  dropdown_menu.rs  hover_card.rs  input.rs  label.rs  menubar.rs  mod.rs  navigation_menu.rs  pagination.rs  popover.rs  progress.rs  radio_group.rs  scroll_area.rs  select.rs  separator.rs  sheet.rs  sidebar.rs  skeleton.rs  slider.rs  switch.rs  table.rs  tabs.rs  textarea.rs  toggle.rs  toggle_group.rs  tooltip.rs  typography.rs
crates/kit/tests/: badge_semantics.rs  class_prop_consistency.rs  floating_dom_integration.rs  on_change_callbacks.rs  select_keyboard.rs  simple_floating_integration.rs
crates/regression/: Cargo.toml
crates/regression/src/: baseline.rs  compare.rs  discover.rs  error.rs  lib.rs  report.rs  report_template.html  result.rs  run.rs  story.rs
crates/story-macro/: Cargo.toml
crates/story-macro/src/: doc_comments.rs  lib.rs  registration_generator.rs  story_generator.rs  story_macro_args.rs  variant_generator.rs
crates/ui/: Cargo.toml  justfile
crates/ui-book/: Cargo.toml  build.rs  index.html  justfile
crates/ui-book/public/: styles.css
crates/ui-book/src/: main.rs
crates/ui-book/src/stories/: CLAUDE.md  badge.rs  breadcrumb.rs  button.rs  card.rs  checkbox.rs  collapsible.rs  input.rs  label.rs  mod.rs  select.rs  textarea.rs  toggle.rs
crates/ui/src/: CLAUDE.md  floating.rs  lib.rs
crates/ui/src/behavior/: checkbox.rs  mod.rs  select.rs  sidebar.rs  toggle.rs
crates/ui/src/component/: breadcrumb.rs  button.rs  card.rs  mod.rs  sidebar.rs  typography.rs
crates/ui/src/container/: mod.rs  sidebar.rs
crates/ui/src/layout/: mod.rs
crates/ui/src/visual/: breadcrumb.rs  button.rs  checkbox.rs  collapsible.rs  input.rs  mod.rs  select.rs  separator.rs  sidebar.rs  textarea.rs
crates/ui/tests/: floating_dom_integration.rs  simple_floating_integration.rs
examples/basic/: Cargo.toml  Trunk.toml  holt.toml  index.html
examples/basic/public/: styles.css
examples/basic/src/: lib.rs  main.rs
examples/basic/src/stories/: mod.rs  square_a.rs  square_b.rs
examples/basic/tests/: e2e.rs
src/: lib.rs
(+93 files in other folders)
