[workspace]
members = ["crates/*", "examples/*"]

resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"

description = "A UI toolkit for Leptos"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/aonyx-ai/holt.git"

# Leptos 0.8.5 requires Rust 1.88 or later
rust-version = "1.88"

[workspace.dependencies]
leptos = ">=0.8.3"
leptos_router = "0.8.0"
leptos_meta = "0.8.0"
tailwind_fuse = { version = ">=0.3.0", features = ["variant"] }
wasm-bindgen-test = "0.3.0"

[workspace.metadata.dylint]
libraries = [
  { git = "https://github.com/aonyx-ai/whisker", pattern = "lints/*" },
]
