[package]
name = "holt-book"

version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
holt-ui = { path = "../ui" }
inventory = "0.3.20"
leptos = { workspace = true, features = ["csr"] }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
log = "0.4.22"
paste = "1.0.15"
phf = { version = "0.12", default-features = false }
phf_codegen = "0.11"
prettyplease = ">=0.2.25,<1"
serde_json = ">=1.0.25,<2"
syn = { version = ">=2.0.95,<3", default-features = false, features = [
  "parsing",
] }
tailwind_fuse = { version = "0.3.0", features = ["variant"] }
thiserror = ">=1.0.37, <3"

[dev-dependencies]
tempfile = "3.8"
