[package]
name = "holt-book"

version.workspace = true
edition.workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
holt-kit = { path = "../kit" }
inventory = "0.3.20"
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
log = "0.4.22"
tailwind_fuse = { version = "0.3.0", features = ["variant"] }
thiserror = ">=1.0.37, <2"
markdown = "1.0.0"
const_format = "0.2.34"
holt-story-macro = { path = "../story-macro" }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["csr"]
csr = ["leptos/csr"]
ssr = ["leptos/ssr", "leptos_router/ssr", "leptos_meta/ssr"]
hydrate = ["leptos/hydrate"]
