[package]
name = "holt-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "holt"
path = "src/main.rs"

[dependencies]
clawless = "0.5"
doco = "0.2.2"
eframe = "0.33"
holt-book = { path = "../book", default-features = false }
inventory = "0.3"
holt-regression = { path = "../regression" }
image = { version = "0.25", features = ["png"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros"] }
toml = "0.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
