[package]
name = "holt-kit-docs"

version.workspace = true
edition.workspace = true

[dependencies]
leptos = { workspace = true }
holt-book = { path = "../book" }
holt-kit = { path = "../kit" }
icondata = { version = "0.7.0", default-features = false, features = [
  "lucide",
] }
leptos_icons = "0.7.0"
[build-dependencies]
thiserror = ">=1.0.37, <2"
itertools = "0.14.0"
