[package]
name = "holt-kit-docs"

version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
holt-book = { path = "../book" }
holt-kit = { path = "../kit" }
icondata = { version = "0.7.0", default-features = false, features = [
  "lucide",
] }
leptos_icons = "0.7.0"
inventory = "0.3.20"
console_error_panic_hook = { version = "0.1.7", optional = true }
doco = { version = "0.2.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
any_spawner = { version = "0.3.0", features = ["tokio"], optional = true }
futures = { version = "0.3", optional = true }
thirtyfour = { version = "0.36.0", optional = true }
tokio = { version = "1.41", features = ["full"], optional = true }
ureq = { version = "3.0", optional = true }
eframe = { version = "0.33", optional = true }
image = { version = "0.25", optional = true, features = ["png"] }

[features]
default = ["csr"]
csr = [
  "holt-book/csr",
  "leptos/csr",
  "wasm-bindgen",
  "console_error_panic_hook",
]
ssr = [
  "holt-book/ssr",
  "leptos/ssr",
  "leptos_router/ssr",
  "leptos_meta/ssr",
  "any_spawner",
  "tokio",
  "futures",
]
hydrate = [
  "holt-book/hydrate",
  "leptos/hydrate",
  "wasm-bindgen",
  "console_error_panic_hook",
]
visual-regression = ["thirtyfour", "tokio", "ureq", "eframe", "image"]
e2e = ["doco", "thirtyfour", "tokio", "futures"]

[build-dependencies]
thiserror = ">=1.0.37, <2"
itertools = "0.14.0"

[[bin]]
name = "ssg"
path = "src/bin/ssg.rs"
required-features = ["ssr"]

[[test]]
name = "e2e"
path = "tests/e2e.rs"
harness = false
required-features = ["e2e"]
