[package]
name = "holt-kit"

version.workspace = true
edition.workspace = true

[dependencies]
leptos = { workspace = true }
tailwind_fuse = { version = "0.3.0", features = ["variant"] }
leptos_icons = "0.7.0"
icondata = { version = "0.6.0", default-features = false, features = [
  "lucide",
] }
web-sys = { version = "0.3.80", features = ["DomRect", "Element"] }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
console_log = "1.0"
console_error_panic_hook = "0.1.7"
log = "0.4.22"
web-sys = "0.3.80"
