[package]
name = "holt-regression"

version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
doco = "0.2.3"
regex = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tempfile = "3"
