[package]
name = "holt-story-macro"

version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = ">=2.0.104,<3", default-features = false, features = [
  "parsing",
  "full",
  "proc-macro",
  "printing",
] }
quote = ">=1.0.40,<2"
proc-macro2 = ">=1.0.95, <2"
prettyplease = ">=0.2.35,<1"

[dev-dependencies]
holt-book = { path = "../book" }
leptos = { workspace = true }
