[package]
name = "holt-ui-book"

version.workspace = true
edition.workspace = true

[dependencies]
leptos = { workspace = true }
holt-book = { path = "../book" }
holt-ui = { path = "../ui" }
icondata = { version = "0.6.0", default-features = false, features = [
  "lucide",
] }
leptos_icons = "0.6.1"
holt-story-macro = { path = "../story-macro" }
